* Fixed styling and layout of matches list  + Added extra margin to the base html main section, to account for the navbar decoration

--- a/flinder/scss/bootstrap-flinder.scss
+++ b/flinder/scss/bootstrap-flinder.scss
@@ -118,3 +118,16 @@ $enable-rfs:false;
   padding-bottom: 80%;
 }*/
 
+.image-thumbnail {
+  width: 8rem;
+  height: 8rem;
+  overflow: hidden;
+  padding: 0;
+}
+
+.image-thumbnail img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
